# apm-assignment1-task3

./: .gitignore  CLAUDE.md  SPECIFICATION.md
code/: README.md  pyproject.toml
code/apm_assignment/: paths.py
code/apm_assignment/part1/: config.py  discover_ocpn.py  dotted_chart.py  flatten_discover.py  generate_log.py  queries.py  render_tables.py  validate.py
code/apm_assignment/part2/: q3_gslpn.py  q5a_constraints.py  q5b_conformance.py
code/notebooks/: 01_generate.ipynb  02_validate.ipynb  03_flatten_discover.ipynb  04_ocpn_n2.ipynb  05_dotted_chart.ipynb  06_queries.ipynb
code/olympic_transport/: config.py  discover_ocpn.py  dotted_chart.py  flatten_discover.py  generate_log.py  q3_gslpn.py  q5a_constraints.py  q5b_conformance.py  queries.py  render_tables.py  validate.py
data/: log.json  log.sqlite  version_control.sqlite
doc/: DOCUMENTATION_SPECIFICATION.md
models/: N_ot_oa.pnml  N_ot_sync.pnml
report/: main.synctex.gz.sum.synctex  main.tex  preamble.tex  sync_figures.py
report/sections/: q3_00_intro.tex  q3_a_design.tex  q3_b_relations.tex  q3_c_normative_net.tex  q3_d_log.tex  q3_e_ocpn.tex  q3_f_queries.tex  q3_g_custom_query.tex
report2/: .gitignore  main.tex
