[tool.poetry]
name = "apm-assignment"
version = "0.1.0"
description = "Advanced Process Mining assignment — Part I (olympic transport OCEL simulation) and Part II (GSLPN, OCPQ-equivalent Python checks)."
authors = ["Group <GroupID>"]
readme = "README.md"
packages = [{ include = "apm_assignment" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
r4pm = "*"
pm4py = "*"
pandas = "*"
matplotlib = "*"
graphviz = "*"
ipykernel = "^7.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"

[tool.poetry.scripts]
generate = "apm_assignment.part1.generate_log:main"
validate = "apm_assignment.part1.validate:main"
discover = "apm_assignment.part1.flatten_discover:main"
ocpn = "apm_assignment.part1.discover_ocpn:main"
dotted = "apm_assignment.part1.dotted_chart:main"
queries = "apm_assignment.part1.queries:main"
q3 = "apm_assignment.part2.q3_gslpn:main"
q5a = "apm_assignment.part2.q5a_constraints:main"
q5b = "apm_assignment.part2.q5b_conformance:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
